k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: frontend
    namespace: ricochet
    labels:
        app: frontend
spec:
    type: ClusterIP
    selector:
        app: frontend
    ports:
    - port: 3000
