k8s/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-frontend
    namespace: ricochet
    annotations:
        nginx.ingress.kubernetes.io/app-root: /index.html
spec:
    ingressClassName: nginx
    defaultBackend:
    rules:
        - http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: frontend
                            port:
                                number: 3000
